fiz schema and sample data to actually comply

--- a/services/web/client/source/resource/qxapp/project-v0.0.1.json
+++ b/services/web/client/source/resource/qxapp/project-v0.0.1.json
@@ -41,8 +41,6 @@
       "description": "user uuid"
     },
     "collaborators": {
-      "type": "array",
-      "items": {
         "type": "object",
         "description": "UUIDs of the users/groups who should get access to this",
         "patternProperties": {
@@ -57,12 +55,11 @@
             }
           }
         }
-      }
     },
     "creationDate": {
       "type": "string",
       "description": "project creation date",
-      "pattern": "\\d{4}-(12|11|10|[1-9])-(31|30|[12]\\d|[1-9])T(2[0-4]|1\\d|[1-9])(:(\\d|[0-5]\\d)){2}Z",
+      "pattern": "\\d{4}-(12|11|10|0?[1-9])-(31|30|[0-2]?\\d)T(2[0-3]|1\\d|0?[1-9])(:(\\d|[0-5]\\d)){2}Z",
       "examples": [
         "2018-07-01T11:13:43Z"
       ]
@@ -70,7 +67,7 @@
     "lastChangeDate": {
       "type": "string",
       "description": "last save date",
-      "pattern": "\\d{4}-(12|`11|10|[1-9])-(31|30|[12]\\d|[1-9])T(2[0-4]|1\\d|[1-9])(:(\\d|[0-5]\\d)){2}Z",
+      "pattern": "\\d{4}-(12|11|10|0?[1-9])-(31|30|[0-2]?\\d)T(2[0-3]|1\\d|0?[1-9])(:(\\d|[0-5]\\d)){2}Z",
       "examples": [
         "2018-07-01T11:13:43Z"
       ]
@@ -84,14 +81,13 @@
           "required": [
             "type",
             "version",
-            "inputs",
             "position"
           ],
           "properties": {
             "type": {
               "type": "string",
               "description": "distinctive name for the node based on the docker registry path",
-              "pattern": "^(service)/(computational|dynamic)/([^\\s/]+)$",
+              "pattern": "^(service)/(computational|dynamic)(/[^\\s/]+)+$",
               "examples": [
                 "service/computational/sleeper",
                 "service/dynamic/3dviewer"
@@ -155,49 +151,54 @@
                   ]
                 }
               }
-            }
-          },
-          "outputs": {
-            "type": "object",
-            "patternProperties": {
-              "^[-_a-zA-Z0-9]+$": {
-                "oneOf": [
-                  {
-                    "type": [
-                      "integer",
-                      "boolean",
-                      "string",
-                      "number"
-                    ]
-                  },
-                  {
-                    "type": "object",
-                    "additionalProperties": false,
-                    "required": [
-                      "store",
-                      "path"
-                    ],
-                    "properties": {
-                      "store": {
-                        "type": "string"
-                      },
-                      "path": {
-                        "type": "string"
+            },
+            "outputs": {
+              "type": "object",
+              "patternProperties": {
+                "^[-_a-zA-Z0-9]+$": {
+                  "oneOf": [
+                    {
+                      "type": [
+                        "integer",
+                        "boolean",
+                        "string",
+                        "number"
+                      ]
+                    },
+                    {
+                      "type": "object",
+                      "additionalProperties": false,
+                      "required": [
+                        "store",
+                        "path"
+                      ],
+                      "properties": {
+                        "store": {
+                          "type": "string"
+                        },
+                        "path": {
+                          "type": "string"
+                        }
                       }
                     }
-                  }
-                ]
+                  ]
+                }
               }
-            }
-          },
-          "position": {
-            "type": "object",
-            "properties": {
-              "x": {
-                "type": "integer"
-              },
-              "y": {
-                "type": "integer"
+            },
+            "position": {
+              "type": "object",
+              "additionalProperties": false,
+              "required": [
+                "x",
+                "y"
+              ],
+              "properties": {
+                "x": {
+                  "type": "integer"
+                },
+                "y": {
+                  "type": "integer"
+                }
               }
             }
           }
