--- a/services/web/client/config.json
+++ b/services/web/client/config.json
@@ -11,29 +11,18 @@
   "export" :
   [
     "api",
-    "build",
-    "clean",
-    "distclean",
-    "fix",
-    "info",
-    "lint",
-    "migration",
-    "pretty",
     "profiling",
-    "source",
-    "source-all",
     "test",
-    "test-source",
-    "translation"
+    "test-source"
   ],
 
   "let" :
   {
     "APPLICATION"  : "qxapp",
-    "QOOXDOO_PATH" : "../qooxdoo-sdk/",
     "QXTHEME"      : "qx.theme.Modern",
     "API_EXCLUDE"  : ["qx.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*"],
     "LOCALES"      : [ "en" ],
+    "CACHE"        : "./cache",
     "ROOT"         : "."
   }
 }
