--- a/services/web/client/package.json
+++ b/services/web/client/package.json
@@ -3,6 +3,9 @@
     "qxcompiler": "^0.2.13"
   },
   "scripts": {
-    "preinstall": "npm i -g http-server"
+    "preinstall": "npm i -g http-server babel-cli"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
