adding docker-compose development adapted makefiles fixed LF endings

--- a/services/dy-3dvis/Makefile
+++ b/services/dy-3dvis/Makefile
@@ -11,8 +11,14 @@ endif
 build:	
 	${DOCKER_COMPOSE} -f docker-compose.yml build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
 
+build-devel:	
+	${DOCKER_COMPOSE} -f docker-compose.yml -f docker-compose.devel.yml build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
+
 up:
 	${DOCKER_COMPOSE} -f docker-compose.yml up
+
+up-devel:
+	${DOCKER_COMPOSE} -f docker-compose.yml -f docker-compose.devel.yml up
 
 down:
 	${DOCKER_COMPOSE} -f docker-compose.yml down
