--- a/services/dy-3dvis/docker-compose.yml
+++ b/services/dy-3dvis/docker-compose.yml
@@ -3,15 +3,15 @@ services:
   paraviewweb:
     build:
       context: paraviewweb
-      
     ports:
       - '8777:8777'
     command: 
-      echo "completed base paraview"
+      echo "completed base paraview build"
   #--------------------------------------------------------------------
-  simcoreparaviewweb:
+  simcore-paraviewweb:
     build:
       context: simcoreparaviewweb
+      target: production
       args: 
         VCS_REF: 
         BUILD_DATE:
@@ -25,3 +25,5 @@ services:
         io.simcore.authors: '{"authors": [{"name": "Sylvain Anderegg", "email": "anderegg@itis.ethz.ch", "affiliation": "ITIS Foundation"}]}'
         io.simcore.inputs: '{"inputs": [{"key": "in1", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}, {"key": "in2", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}]}'
         io.simcore.viewer: '{"viewer":{"ip":null, "port":null}}'
+    ports:
+      - '8776:8777'
