--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -2,24 +2,24 @@ FROM dy-3dvis_paraviewweb:latest AS common
 
 LABEL maintainer="sanderegg"
 
-#TODO: check with @crespo if this is correct
-RUN useradd -m -U scu
-ENV HOME /home/scu
-WORKDIR /home/scu
-
 # install git
 RUN apt-get update && \
     apt-get install -y \
-    git
+    git python3-pip
 
-# install requirements, install jupyter notebook extensions and enable necessary ones
-COPY --chown=scu:scu requirements.txt .
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
-
+# define user
+#TODO: check with @crespo if this is correct
+RUN useradd -m -U -u 8004 scu
+ENV HOME /home/scu
+WORKDIR /home/scu
 USER scu
 
-# download the simcore_sdk package
+#TODO: will be replaced by pip installs
+# install python requirements for simcore-sdk/s3wrapper
+COPY --chown=scu:scu requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# download and install the simcore_sdk package
 RUN mkdir packages && \
     cd packages && \
     git init && \
@@ -28,9 +28,9 @@ RUN mkdir packages && \
     echo "packages/simcore-sdk/src/simcore_sdk/*" >> .git/info/sparse-checkout && \
     echo "packages/s3wrapper/src/s3wrapper/*" >> .git/info/sparse-checkout && \
     git pull --depth=1 origin master
-
 ENV PYTHONPATH="./packages/packages/simcore-sdk/src:./packages/packages/s3wrapper/src"
-
+# set the necessary env for accessing S3/DB
+#TODO: should be done with secrets
 ENV SIMCORE_NODE_UUID="-1" \
     S3_ENDPOINT="=1" \
     S3_ACCESS_KEY="-1" \
@@ -40,6 +40,13 @@ ENV SIMCORE_NODE_UUID="-1" \
     POSTGRES_USER="-1" \
     POSTGRES_PASSWORD="-1" \
     POSTGRES_DB="-1"
+# copy script to get the inputs inside the local file system
+COPY --chown=scu:scu input-retriever.py input-retriever.py
+# copy start script
+COPY --chown=scu:scu boot.sh boot.sh
+RUN chmod +x boot.sh
+# get paraviewweb start script
+COPY --from=dy-3dvis_paraviewweb --chown=scu:scu /startup.sh .
 
 # Labels.
 ARG VCS_REF
@@ -52,11 +59,10 @@ LABEL org.label-schema.schema-version="1.0" \
     org.label-schema.vendor="IT'IS foundation"
 # service runtime settings
 LABEL simcore.service.settings='[{"name": "ports", "type": "int", "value": 8777}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]'
-
-COPY --chown=scu:scu input-retriever.py input-retriever.py
-COPY --chown=scu:scu boot.sh boot.sh
-RUN chmod +x boot.sh
-
-COPY --from=dy-3dvis_paraviewweb --chown=scu:scu /startup.sh .
-
-ENTRYPOINT [ "/bin/sh", "boot.sh" ]
+#------------------------------------------
+FROM common as development
+ENV CREATE_DUMMY_TABLE 1
+CMD [ "/bin/bash", "boot.sh" ]
+#------------------------------------------
+FROM common AS production
+ENTRYPOINT [ "/bin/bash", "boot.sh" ]
