--- a/services/dy-3dvis/docker-compose.devel.yml
+++ b/services/dy-3dvis/docker-compose.devel.yml
@@ -3,9 +3,23 @@ services:
   simcore-paraviewweb:
     build:
       target: development
+    environment: 
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     depends_on:
       - postgres
       - minio
+    volumes: 
+      - ./simcoreparaviewweb/input-retriever.py:/home/scu/input-retriever.py
+      - ../../packages/simcore-sdk/src:/home/scu/packages/packages/simcore-sdk/src
+      - ../../packages/s3wrapper/src:/home/scu/packages/packages/s3wrapper/src
+      - ./test-data:/home/scu/test-data
   postgres:
     image: postgres:10
     environment:
