--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -14,21 +14,6 @@ ENV HOME /home/scu
 WORKDIR /home/scu
 USER scu
 
-#TODO: will be replaced by pip installs
-# install python requirements for simcore-sdk/s3wrapper
-COPY --chown=scu:scu requirements.txt .
-RUN pip3 install --no-cache-dir -r requirements.txt
-
-# download and install the simcore_sdk package
-RUN mkdir packages && \
-    cd packages && \
-    git init && \
-    git remote add origin -f https://github.com/ITISFoundation/osparc-simcore.git && \
-    git config core.sparsecheckout true && \
-    echo "packages/simcore-sdk/src/simcore_sdk/*" >> .git/info/sparse-checkout && \
-    echo "packages/s3wrapper/src/s3wrapper/*" >> .git/info/sparse-checkout && \
-    git pull --depth=1 origin master
-ENV PYTHONPATH="./packages/packages/simcore-sdk/src:./packages/packages/s3wrapper/src"
 # set the necessary env for accessing S3/DB
 #TODO: should be done with secrets
 ENV SIMCORE_NODE_UUID="-1" \
@@ -40,13 +25,18 @@ ENV SIMCORE_NODE_UUID="-1" \
     POSTGRES_USER="-1" \
     POSTGRES_PASSWORD="-1" \
     POSTGRES_DB="-1"
-# copy script to get the inputs inside the local file system
-COPY --chown=scu:scu input-retriever.py input-retriever.py
+
 # copy start script
 COPY --chown=scu:scu boot.sh boot.sh
 RUN chmod +x boot.sh
 # get paraviewweb start script
 COPY --from=dy-3dvis_paraviewweb --chown=scu:scu /startup.sh .
+#TODO: will be replaced when pip installs is available
+# install python requirements for simcore-sdk/s3wrapper
+COPY --chown=scu:scu requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
+# set python path
+ENV PYTHONPATH="./packages/packages/simcore-sdk/src:./packages/packages/s3wrapper/src"
 
 # Labels.
 ARG VCS_REF
@@ -61,8 +51,25 @@ LABEL org.label-schema.schema-version="1.0" \
 LABEL simcore.service.settings='[{"name": "ports", "type": "int", "value": 8777}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]'
 #------------------------------------------
 FROM common as development
+VOLUME /home/scu/packages/packages/simcore-sdk/src \
+    /home/scu/packages/packages/s3wrapper/src
 ENV CREATE_DUMMY_TABLE 1
+ENV USE_CASE_CONFIG_FILE="devel-dbconfiguration.json"
+COPY --chown=scu:scu devel-dbconfiguration.json .
+COPY --chown=scu:scu devel-initconfiguration.py .
 CMD [ "/bin/bash", "boot.sh" ]
 #------------------------------------------
 FROM common AS production
+#TODO: will be replaced by pip installs when available
+# download and install the simcore_sdk package
+RUN mkdir packages && \
+    cd packages && \
+    git init && \
+    git remote add origin -f https://github.com/ITISFoundation/osparc-simcore.git && \
+    git config core.sparsecheckout true && \
+    echo "packages/simcore-sdk/src/simcore_sdk/*" >> .git/info/sparse-checkout && \
+    echo "packages/s3wrapper/src/s3wrapper/*" >> .git/info/sparse-checkout && \
+    git pull --depth=1 origin master
+# copy script to get the inputs inside the local file system
+COPY --chown=scu:scu input-retriever.py input-retriever.py
 ENTRYPOINT [ "/bin/bash", "boot.sh" ]
