--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "services/dy-3dvis/paraviewweb"]
 	path = services/dy-3dvis/paraviewweb
-	url = git@github.com:BMCV/docker-paraviewweb.git
+	url = git@github.com:sanderegg/docker-paraviewweb.git
