--- a/packages/simcore-sdk/requirements-dev.txt
+++ b/packages/simcore-sdk/requirements-dev.txt
@@ -1,9 +1,5 @@
-# installs project in editable mode from current directory
-# `setup.py` already contains instructions to install dependencies,
--e .
+# develop mode
+-e . ".[test]"
+-e ../s3wrapper/
 
-# testing
--r requirements/testing.txt
-
-# linting
 autopep8>=1.3.5
