--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,10 @@ matrix:
         - while sudo lsof -Pi :5432 -sTCP:LISTEN -t; do sleep 1; done
 
       install:
-        - pip3 install --upgrade pip && pip3 --version
-        - pip install wheel
+        - pip install --upgrade pip wheel setuptools && pip3 --version
         - pip3 install packages/s3wrapper[test]
         - pip3 install packages/simcore-sdk[test]
+        - pushd services/web/server; pip3 install -r requirements/ci.txt; popd
 
       before_script:
         - pylint --version
