--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -1,4 +1,4 @@
-FROM dy-3dvis_paraviewweb:latest AS common
+FROM kitware/paraviewweb:pvw-visualizer-osmesa-5.5.0 AS common
 
 LABEL maintainer="sanderegg"
 
@@ -9,11 +9,11 @@ RUN apt-get update && \
 
 # define user
 #TODO: check with @crespo if this is correct
-RUN useradd -m -U -u 8004 scu
-ENV HOME /home/scu
-WORKDIR /home/scu
-USER scu
-
+# RUN useradd -m -U -u 8004 scu
+# ENV HOME /home/scu
+# WORKDIR /home/scu
+# USER scu
+WORKDIR /home/root
 # set the necessary env for accessing S3/DB
 #TODO: should be done with secrets
 ENV SIMCORE_NODE_UUID="-1" \
@@ -26,16 +26,13 @@ ENV SIMCORE_NODE_UUID="-1" \
     POSTGRES_PASSWORD="-1" \
     POSTGRES_DB="-1"
 
-# copy start script
-COPY --chown=scu:scu boot.sh boot.sh
-RUN chmod +x boot.sh
-# get paraviewweb start script
-COPY --from=dy-3dvis_paraviewweb --chown=scu:scu /startup.sh .
 #TODO: will be replaced when pip installs is available
 # install python requirements for simcore-sdk/s3wrapper
-COPY --chown=scu:scu requirements.txt .
+COPY requirements.txt .
+RUN pip3 install --upgrade pip
 RUN pip3 install --no-cache-dir -r requirements.txt
 # set python path
+
 ENV PYTHONPATH="./packages/packages/simcore-sdk/src:./packages/packages/s3wrapper/src"
 
 # Labels.
@@ -49,15 +46,23 @@ LABEL org.label-schema.schema-version="1.0" \
     org.label-schema.vendor="IT'IS foundation"
 # service runtime settings
 LABEL simcore.service.settings='[{"name": "ports", "type": "int", "value": 8777}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]'
+
+# copy start script
+ARG PORT
+ENV SERVER_PORT=$PORT
+COPY boot.sh boot.sh
+RUN chmod +x boot.sh
+
 #------------------------------------------
 FROM common as development
 VOLUME /home/scu/packages/packages/simcore-sdk/src \
     /home/scu/packages/packages/s3wrapper/src
 ENV CREATE_DUMMY_TABLE 1
 ENV USE_CASE_CONFIG_FILE="devel-dbconfiguration.json"
-COPY --chown=scu:scu devel-dbconfiguration.json .
-COPY --chown=scu:scu devel-initconfiguration.py .
-CMD [ "/bin/bash", "boot.sh" ]
+COPY devel-dbconfiguration.json .
+COPY devel-initconfiguration.py .
+# Need to use entrypoint as base image's entrypoint must be overriden
+ENTRYPOINT [ "/bin/bash", "boot.sh" ]
 #------------------------------------------
 FROM common AS production
 #TODO: will be replaced by pip installs when available
@@ -71,5 +76,5 @@ RUN mkdir packages && \
     echo "packages/s3wrapper/src/s3wrapper/*" >> .git/info/sparse-checkout && \
     git pull --depth=1 origin master
 # copy script to get the inputs inside the local file system
-COPY --chown=scu:scu input-retriever.py input-retriever.py
+COPY input-retriever.py input-retriever.py
 ENTRYPOINT [ "/bin/bash", "boot.sh" ]
