--- a/services/dy-3dvis/docker-compose.yml
+++ b/services/dy-3dvis/docker-compose.yml
@@ -1,13 +1,5 @@
 version: '3.4'
 services:
-  paraviewweb:
-    build:
-      context: paraviewweb
-    ports:
-      - '8777:8777'
-    command: 
-      echo "completed base paraview build"  
-  #--------------------------------------------------------------------
   simcore-paraviewweb:
     build:
       context: simcoreparaviewweb
@@ -15,6 +7,7 @@ services:
       args: 
         VCS_REF: 
         BUILD_DATE:
+        SERVER_PORT: "8777"
       labels: 
         io.simcore.key: '{"key": "simcore/services/dynamic/paraviewweb"}'
         io.simcore.outputs: '{"outputs": []}'
@@ -26,13 +19,5 @@ services:
         io.simcore.inputs: '{"inputs": [{"key": "in1", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}, {"key": "in2", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}]}'
         io.simcore.viewer: '{"viewer":{"ip":null, "port":null}}'
     ports:
-      - '8777:8777'
-    depends_on: 
-      - paraviewweb
+      - '8777:80'    
   #--------------------------------------------------------------------
-  paraviewweb-official:
-    image: kitware/paraviewweb:pvw-visualizer-osmesa-5.5.0
-    ports:
-      - '8081:80'
-    command: 
-      ws://localhost:8081 --mesa-llvm
