--- a/services/dy-3dvis/docker-compose.yml
+++ b/services/dy-3dvis/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args: 
         VCS_REF: 
         BUILD_DATE:
-        SERVER_PORT: "8777"
+        PORT: 8777
       labels: 
         io.simcore.key: '{"key": "simcore/services/dynamic/paraviewweb"}'
         io.simcore.outputs: '{"outputs": []}'
