--- a/services/dy-3dvis/docker-compose.devel.yml
+++ b/services/dy-3dvis/docker-compose.devel.yml
@@ -12,6 +12,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - TEST_DATA_PATH=/home/root/test-data
     depends_on:
       - postgres
       - minio
