--- a/services/dy-3dvis/docker-compose.yml
+++ b/services/dy-3dvis/docker-compose.yml
@@ -9,11 +9,11 @@ services:
         BUILD_DATE:
         PORT: 8777
       labels: 
-        io.simcore.key: '{"key": "simcore/services/dynamic/paraviewweb"}'
+        io.simcore.key: '{"key": "simcore/services/dynamic/3d-viewer"}'
         io.simcore.outputs: '{"outputs": []}'
         io.simcore.tag: '{"tag": "0.0.1"}'
-        io.simcore.name: '{"name": "paraviewweb"}'
-        io.simcore.description: '{"description": "Paraview Web Visualizer"}'
+        io.simcore.name: '{"name": "3d-viewer"}'
+        io.simcore.description: '{"description": "Paraview Web-based Visualizer"}'
         io.simcore.contact: '{"contact": "anderegg@itis.ethz.ch"}'
         io.simcore.authors: '{"authors": [{"name": "Sylvain Anderegg", "email": "anderegg@itis.ethz.ch", "affiliation": "ITIS Foundation"}]}'
         io.simcore.inputs: '{"inputs": [{"key": "in1", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}, {"key": "in2", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}]}'
